--- a/index.html
+++ b/index.html
@@ -1,44 +1,144 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página Principal</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-
-    <div>   
-        <div class="logo">
-            <img src="assets/images/logo.png" width="200"/>
-        </div>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <div>
+      <div class="logo">
+        <img src="assets/images/LOGO-DIO-COLOR.png_name_20221031-2831-ekn5hh.png" width="150" />
+      </div>
     </div>
 
     <div class="bar"></div>
 
     <div class="content">
-        <div class="sidebar">
-            <h2>Título</h2>
-            <ul>
-                <li><a href="#">Links</a></li>
-            </ul>
-        </div>
+      <div class="sidebar">
+        <h2>Série de TV</h2>
+        <ul>
+          <li><a href="#inicio">Friends</a></li>
+        </ul>
+      </div>
 
-        <div class="main">
-            
-        </div>
+      <div class="main">
+        <h1 id="inicio">Tudo sobre Friends</h1>
 
-        <div class="anchors">
-            <h2>Neste Artigo</h2>
-            <ul>
-                <li><a href="#">Âncoras</a></li>
-            </ul>
-        </div>
+        <h2 id="sinopse">Sinopse</h2>
+        <p>
+          Friends acompanha a vida de seis amigos —
+          <strong>Rachel, Monica, Phoebe, Ross, Chandler e Joey</strong> — que
+          vivem em Nova York e compartilham as alegrias e dificuldades da vida
+          adulta. Entre cafés no Central Perk, relacionamentos complicados,
+          mudanças de carreira e muitas piadas, o grupo forma uma amizade
+          profunda que se torna o verdadeiro pilar de suas vidas. A série
+          mistura <u>humor, romance e drama,</u> mostrando temas como
+          <u>independência, identidade, amadurecimento e amor,</u> tudo com um
+          tom <u>leve e cativante.</u> Ao longo de dez temporadas, os
+          personagens crescem pessoal e profissionalmente, mas sempre retornam
+          uns aos outros, reforçando a ideia de que os
+          <u>amigos são a família que a gente escolhe.</u>
+        </p>
+
+        <h2 id="producao">Produção</h2>
+        <p>
+          Friends é uma sitcom americana criada por
+          <strong>David Crane e Marta Kauffman</strong> e apresentada pela
+          <strong>rede de televisão NBC</strong> entre
+          <strong>22 de setembro de 1994 e 6 de maio de 2004,</strong> com um
+          total de <strong>236 episódios.</strong> A série foi produzida pela
+          Bright/Kauffman/Crane Productions em associação com a Warner Bros
+          Television. Os produtores executivos originais foram Crane, Kauffman e
+          Kevin S. Bright, com muitos outros a serem promovidos posteriormente.
+        </p>
+
+        <img src="assets/images/friends.png" alt="" width="100%" />
+
+        <h2 id="personagens">Personagens</h2>
+        <p>
+          <strong><u>Rachel Green (Jennifer Aniston):</u></strong> <br />
+          Mulher rica e mimada que amadurece e se torna independente ao longo da
+          série. Trabalhou como garçonete e depois em moda. Vive uma relação
+          conturbada com Ross, com quem posteriormente tem uma filha, Emma.
+          <br /><br />
+
+          <strong><u>Monica Geller (Courteney Cox):</u></strong> <br />
+          Chef de cozinha, obsessiva por limpeza e competitiva. Durante a
+          adolescência, era obesa, o que é motivo de lembranças ruins e
+          neuroses. Todos os personagens gostam de se encontrar no seu
+          apartamento. Apesar dos defeitos, ela é a anfitriã-mor da série. Se
+          casa com Chandler e adota dois filhos no final da série.
+          <br /><br />
+
+          <strong><u>Phoebe Buffay (Lisa Kudrow):</u></strong> <br />
+          Excêntrica e com passado difícil, viveu nas ruas e perdeu a mãe cedo.
+          Trabalha como massagista e cantora ("Smelly Cat"). Se casa com Mike na
+          última temporada. <br /><br />
+
+          <strong><u>Joey Tribbiani (Matt LeBlanc):</u></strong> <br />
+          Ator ítalo-americano, conhecido por seu papel em uma novela. Possui um
+          cômico raciocínio lento, fome enorme e adoração por pizza. Tenta
+          conquistar toda mulher que aparece em sua frente com sua famosa frase
+          "How you doing?". Mora com Chandler e tem uma paixão passageira por
+          Rachel. <br /><br />
+
+          <strong><u>Chandler Bing (Matthew Perry):</u></strong> <br />
+          Sarcasmo é sua marca registrada. Troca um emprego odiado por
+          publicidade, onde se realiza. Tem um passado familiar incomum e se
+          casa com Monica. <br /><br />
+
+          <strong><u>Ross Geller (David Schwimmer):</u></strong> <br />
+          Paleontólogo inteligente e irmão de Monica. Teve três casamentos
+          fracassados e sempre foi apaixonado por Rachel. Tem dois filhos: Ben e
+          Emma.
+        </p>
+
+        <h2 id="impacto">Impacto Cultural</h2>
+        <p>
+          Embora inicialmente pensada apenas como uma série de comédia, Friends
+          teve um enorme impacto cultural ao redor do mundo.
+          <u>O penteado</u> da personagem <u>Rachel Green</u>, interpretada por
+          Jennifer Aniston, ficou tão popular que foi apelidado de
+          <strong>“The Rachel”,</strong> sendo
+          <u>copiado por milhares de mulheres globalmente</u> nos anos 90.
+          <br /><br>
+
+          <u>Expressões dos personagens</u> também se tornaram parte da cultura
+          pop, especialmente a
+          <strong>saudação de Joey, “How you doin’?”</strong>, que virou uma
+          frase icônica do inglês coloquial e é reconhecida até hoje. <br /><br>
+
+          Além disso, pesquisadores notaram que a <u>série influenciou</u> o uso
+          do <u>idioma inglês</u>. Um
+          <strong>estudo da Universidade de Toronto</strong> apontou que os
+          personagens usavam com <u>frequência a palavra "so"</u> para
+          intensificar adjetivos (“so funny”, “so cute”), mais do que outras
+          formas tradicionais como “very” ou “really”. Isso pode ter
+          <strong>acelerado mudanças no inglês falado nos Estados Unidos</strong
+          >. <br /><br>
+
+          Após os <u>atentados de 11 de setembro de 2001</u>, a
+          <strong>audiência da série aumentou em 17%</strong>, mostrando como
+          Friends também funcionava como uma forma de
+          <strong>conforto para o público</strong>
+          durante momentos difíceis.
+        </p>
+      </div>
+
+      <div class="anchors">
+        <h2>Neste Artigo</h2>
+        <ul>
+          <li><a href="#sinopse">Sinopse</a></li>
+          <li><a href="#producao">Produção</a></li>
+          <li><a href="#personagens">Personagens</a></li>
+          <li><a href="#impacto">Impacto Cultural</a></li>
+        </ul>
+      </div>
     </div>
 
-    <div class="footer">
-
-    </div>
-</body>
+    <div class="footer"></div>
+  </body>
 </html>
